# OpenDnD

./: .gitignore  README.md  pyproject.toml  server.py
rasanahal/: __main__.py
rasanahal/commands/: __init__.py
rasanahal/stars/: __init__.py  campaign_add_user.py  campaign_create.py  campaign_get.py  campaign_get_details.py  character_add_class.py  character_add_object.py  character_add_skill.py  character_add_spell.py  character_create.py  character_get_details.py  class_create.py  example_echo.py  example_user_random.py  group_add_user.py  group_create.py  group_get.py  misc_details.py  misc_get.py  object_create.py  race_create.py  skill_create.py  spell_create.py  user_create.py  user_get.py  user_get_campaign.py  user_get_characters.py
rasanahal/tables/: __init__.py  campaign.py  character.py  class_.py  classassociation.py  group.py  groupassociation.py  message.py  object_.py  objectassociation.py  partecipantassociation.py  race.py  skill.py  skillassociation.py  spell.py  spellassociation.py
scripts/: login.js  main.jsx
static/: style.css
templates/: login.htm  main.htm  mold.htm  nav.htm  signup.htm  test.htm
