[tool.poetry]
name = "opendnd"
version = "0.1.0"
description = ""
authors = ["Lorenzo Balugani <lorenzo.balugani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.13.4"
bcrypt = "^3.1.7"
uvicorn = "^0.11.5"
sqlalchemy = "^1.3.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
