# Remember to run `poetry update` after you edit this file!

[tool.poetry]
    name = "rasanahal"
    description = "A Royalnet pack for D&D."
    version = "0.2.0"
    authors = ["Lorenzo Balugani <lorenzo.balugani@gmail.com>", "Stefano Pigozzi <ste.pigozzi@gmail.com>"]
    homepage = "https://github.com/Steffo99/rasanahal-royalnet"
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.8",
    ]
    readme = "README.md"

# Library dependencies
[tool.poetry.dependencies]
    python = "^3.8"

    [tool.poetry.dependencies.royalnet]
        version = "~5.8.5"
        extras = [
            "alchemy_easy",
            "constellation",
            "sentry",
            "coloredlogs",
        ]

# Development dependencies
[tool.poetry.dev-dependencies]



# Optional dependencies
[tool.poetry.extras]


# Poetry stuff
# Leave it alone!
[build-system]
    requires = ["poetry>=0.12"]
    build-backend = "poetry.masonry.api"
